// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly when has changed 1`] = `
<Form
  className="src-modules-monitor-forms-update-monitor__container"
  onSubmit={[Function]}
>
  <FormRow>
    <Diff
      changeDiff="diff"
    />
  </FormRow>
  <FormRow>
    <Field
      checkboxLabel="Should be ignored"
      component={[Function]}
      label="Visibility"
      name="isIgnored"
    />
    <Field
      checkboxLabel="Mark as has changed"
      component={[Function]}
      label="Has Changed"
      name="hasChanged"
    />
  </FormRow>
  <Divider
    type="basic"
  />
  <FormButtons
    submitLabel="Submit"
    submitting={false}
  />
</Form>
`;

exports[`should render correctly when has not changed 1`] = `
<Form
  className="src-modules-monitor-forms-update-monitor__container"
  onSubmit={[Function]}
>
  <FormRow>
    <Diff
      changeDiff="diff"
    />
  </FormRow>
  <FormRow>
    <Field
      checkboxLabel="Should be ignored"
      component={[Function]}
      label="Visibility"
      name="isIgnored"
    />
  </FormRow>
  <Divider
    type="basic"
  />
  <FormButtons
    submitLabel="Submit"
    submitting={false}
  />
</Form>
`;
